# LangSIG

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: mkdocs-build.yml  sphinx-build.yml
docs/: Makefile  conf.py  index.md  index.rst  meeting.md  meeting.rst  participants.md  participants.rst  requirements.txt
docs/_static/css/: custom.css
