[project]
name = "LangSIG"
version = "0.1.0"
description = "lang-sig.readthedocs.io/"
authors = [
    { name = "Jongsu Liam Kim", email = "jongsukim8@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = false
dev-dependencies = [
  "sphinx==8.0.2",
  "sphinx-book-theme",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["docs"]

