[project]
name = "LangSIG"
version = "0.1.0"
description = "lang-sig.readthedocs.io/"
authors = [
    { name = "Donghee Na", email = "donghee.na@python.org" },
    { name = "Jongsu Liam Kim", email = "jongsukim8@gmail.com" }
]
dependencies = [
  "sphinx==7.1.2",
  "sphinx-book-theme==1.1.3"
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = false
dev-dependencies = [
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["docs"]
